trunk/tests/should-not-compile/return-null-from-bool-function.talc
// EXPECTED ERROR: return expression has type null-type but must be assignable to bool
function bool f() { return null; }
